# voyage-embedders-haystack

./: .env.example  .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/: CLAUDE.md  hooks.json  ralph-loop.local.md  settings.local.json
.claude/commands/: bootstrap-analyze.md  test-embedding-changes.md  update-embedding-model.md  validate-update.md
.claude/hooks/: orchestrator_event_hook.py
.claude/model-specs/: voyage-4-large-spec.json  voyage-4-large-spec.md  voyage-4-lite-spec.json  voyage-4-lite-spec.md  voyage-4-spec.json  voyage-4-spec.md
.claude/model-specs/archive/: 20251221-172630-repo-info.json  20260213-225313-voyage-multimodal-3.5-spec.json  20260213-225313-voyage-multimodal-3.5-spec.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
examples/: contextualized_embedder_example.py  document_embedder_example.py  reranker_example.py  semantic_search_pipeline_example.py  text_embedder_example.py
src/haystack_integrations/components/embedders/voyage_embedders/: __about__.py  __init__.py  voyage_contextualized_document_embedder.py  voyage_document_embedder.py  voyage_multimodal_embedder.py  voyage_text_embedder.py
src/haystack_integrations/components/rankers/voyage/: __init__.py  ranker.py
src/haystack_integrations/components/rerankers/voyage_rerankers/: __init__.py  voyage_text_reranker.py
src/voyage_embedders/: __about__.py  __init__.py  voyage_document_embedder.py  voyage_text_embedder.py
tests/: __init__.py  conftest.py  test_ranker.py  test_voyage_contextualized_document_embedder.py  test_voyage_document_embedder.py  test_voyage_multimodal_embedder.py  test_voyage_text_embedder.py  test_voyage_text_reranker.py
